sumo/tests/netconvert/errors/errors/xml_no_edg/options.netconvert
--xml-node-files=input_nodes.nod.xml --output-file=net.net.xml
